# AI_news_platform

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICK_START.md  README.md  config.yaml  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.tsbuildinfo
.claude/: settings.local.json
app/: DigestTabs.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/api/digest/: route.ts
app/api/favorites/: route.ts
app/api/favorites/summarize/: route.ts
app/api/ingest/: route.ts
app/api/search/: route.ts
app/api/sources/: route.ts
app/favorites/: page.tsx
app/item/[id]/: page.tsx
app/search/: page.tsx
app/settings/: SettingsForm.tsx  page.tsx
app/sources/: SourcesTable.tsx  page.tsx
backend/: __init__.py
backend/connectors/: __init__.py  api.py  base.py  content_fetcher.py  factory.py  rss.py  rss_or_scrape.py  scrape_fallback.py
backend/denoise/: __init__.py  dedup.py  filters.py  quota.py  scorer.py
backend/digest/: __init__.py  generator.py  summarizer.py
backend/pipeline/: __init__.py  cli.py  orchestrator.py
backend/storage/: __init__.py  db.py  migrations.py  models.py  schema.sql
components/: EmptyState.tsx  FavoriteButton.tsx  Filters.tsx  ItemCard.tsx  LoadingSpinner.tsx  Navigation.tsx  Pagination.tsx  ScoreBreakdown.tsx  SearchInput.tsx
docs/: ADD_SOURCE_GUIDE.md  ARCHITECTURE.md  PERFORMANCE.md  PROJECT_STATUS.md  SCALING.md  SCRAPING_APPROACH.md
launchd/: com.ainews.digest.plist.template  com.ainews.ingest.plist.template  install.sh
tests/: test_pipeline.py  test_storage.py
(+1 files in other folders)
